--- a/AdminPanel/src/assets/i18n/fa.json
+++ b/AdminPanel/src/assets/i18n/fa.json
@@ -12,6 +12,8 @@
   "Add Product": "اضافه کردن کالا",
   "Save": "ذخیره",
   "Cancel": "لفو",
+  "Products": "کالا ها",
+  "Dashboard": "داشبورد",
   
   "The maximum number of characters":"حداکثر تعداد کاراکترها",
   "this field is required":"این فیلد الزامی است",
