--- a/AdminPanel/src/assets/i18n/fa.json
+++ b/AdminPanel/src/assets/i18n/fa.json
@@ -18,6 +18,7 @@
   "Actions": "عملیات ها",
   "Edit": "ویرایش",
   "Delete": "حذف",
+  "Created": "زمان ایجاد",
 
   "The maximum number of characters": "حداکثر تعداد کاراکترها",
   "this field is required": "این فیلد الزامی است",
